--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "js-lib",
+  "name": "jlem-js-lib",
   "version": "1.0.0",
   "description": "First library/package",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/index.test.js -w"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/jlem/js-lib",
   "dependencies": {
     "unique-random-array": "1.0.0"
+  },
+  "devDependencies": {
+    "chai": "3.2.0",
+    "mocha": "2.3.0"
   }
 }
